style: Adiciona estilo ao botão.

--- a/index.html
+++ b/index.html
@@ -8,13 +8,11 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <!-- header -->
-    <header>
-      <h1>Dicas Diárias</h1>
-    </header>
     <!-- main -->
     <main>
-      <!-- titulo -->
+      <!-- titulo principal -->
+      <h1>Dicas Diárias</h1>
+      <!-- titulo da dica -->
       <h2 id="dica-do-dia"></h2>
       <!-- botão -->
       <button id="gerar-dica">Gerar Dica</button>
