style: Adiciona ícones do font awesome no documento

--- a/index.html
+++ b/index.html
@@ -11,13 +11,22 @@
     <!-- main -->
     <main>
       <!-- titulo principal -->
-      <h1>Dicas Diárias</h1>
+      <h1>
+        Dicas Diárias <i class="fa-solid fa-clover" style="color: #1abc9c"></i>
+      </h1>
       <!-- titulo da dica -->
       <h2 id="dica-do-dia"></h2>
       <!-- botão -->
-      <button id="gerar-dica">Gerar Dica</button>
+      <button id="gerar-dica">
+        Gerar Dica <i class="fa-solid fa-rotate-right load"></i>
+      </button>
     </main>
     <!-- script -->
     <script src="./js/script.js"></script>
+    <!-- font awesome -->
+    <script
+      src="https://kit.fontawesome.com/5432a0e64c.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
